[gd_scene load_steps=5 format=3 uid="uid://c71ndsjf6u18m"]

[ext_resource type="Script" path="res://graph_edit.gd" id="1_75k0c"]
[ext_resource type="PackedScene" uid="uid://cvbwx5byxr5w7" path="res://graph_popup_menu.tscn" id="3_8j88t"]
[ext_resource type="PackedScene" uid="uid://dxgp44fyfchen" path="res://core/nodes/entry.tscn" id="3_60mli"]
[ext_resource type="PackedScene" uid="uid://ciy2rb4j0ik2u" path="res://core/nodes/spread.tscn" id="4_ocotd"]

[node name="GraphEdit" type="GraphEdit"]
offset_right = 1152.0
offset_bottom = 648.0
scroll_offset = Vector2(-528, -312)
right_disconnects = true
show_zoom_label = true
script = ExtResource("1_75k0c")

[node name="GraphPopupMenu" parent="." instance=ExtResource("3_8j88t")]
visible = false

[node name="Entry" parent="." instance=ExtResource("3_60mli")]
layout_mode = 0
offset_left = 184.0
offset_top = 168.0
offset_right = 232.0
offset_bottom = 246.0
mouse_filter = 1
position_offset = Vector2(-344, -144)

[node name="Spread" parent="." instance=ExtResource("4_ocotd")]
layout_mode = 0
offset_left = 320.0
offset_top = 112.0
offset_right = 439.0
offset_bottom = 198.0
mouse_filter = 1
position_offset = Vector2(-208, -200)

[connection signal="connection_drag_started" from="." to="." method="_on_connection_drag_started"]
[connection signal="connection_from_empty" from="." to="." method="_on_connection_from_empty"]
[connection signal="connection_request" from="." to="." method="_on_connection_request"]
[connection signal="connection_to_empty" from="." to="." method="_on_connection_to_empty"]
[connection signal="copy_nodes_request" from="." to="." method="_on_copy_nodes_request"]
[connection signal="delete_nodes_request" from="." to="." method="_on_delete_nodes_request"]
[connection signal="disconnection_request" from="." to="." method="_on_disconnection_request"]
[connection signal="duplicate_nodes_request" from="." to="." method="_on_duplicate_nodes_request"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="node_selected" from="." to="." method="_on_node_selected"]
[connection signal="paste_nodes_request" from="." to="." method="_on_paste_nodes_request"]
[connection signal="popup_request" from="." to="." method="_on_popup_request"]
[connection signal="node_createion_discarded" from="GraphPopupMenu" to="." method="_on_graph_popup_menu_node_createion_discarded"]
[connection signal="node_creation_selected" from="GraphPopupMenu" to="." method="_on_graph_popup_menu_node_creation_selected"]
